Fix sass en utilities/visibility

--- a/resources/assets/sass/utilities/_visibility.scss
+++ b/resources/assets/sass/utilities/_visibility.scss
@@ -25,7 +25,7 @@
 */
 
 %visuallyhidden-focusable {
-    @extends %visuallyhidden;
+    @extend %visuallyhidden;
     &:active,
     &:focus {
         clip: auto;
